update IROS15 paper link

--- a/_data/research.yml
+++ b/_data/research.yml
@@ -30,6 +30,7 @@
     - title: "Aerial Tool Operation System using Quadrotors as Rotating Thrust Generators"
       author: "Hai-Nguyen Nguyen, Sangyul Park, Dongjun Lee"
       conference: "IROS"
+      url: "https://ieeexplore.ieee.org/document/7353534/"
       page: "1285-1291"
       year: "2015"
       links:
